[package]
name = "scylla"
version = "0.1.0"
authors = ["; )"]
edition = "2018"

[dependencies]
tokio = {version = "0.3.0", features = ["net", "io-util", "sync"]}
bytes = "0.5"

[dev-dependencies]
tokio = {version = "0.3.0", features = ["net", "io-util", "sync", "macros", "rt-multi-thread"]}
tokio-test = "0.3.0"
